Handle exceptions during GET calls